<resources>

    <string name="app_name">Coupon</string>
    <string name="facebook_app_id">1443831725640970</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset password</string>
    <string name="send">Send</string>
    <string name="enter_email">Please enter email address</string>
    <string name="enter_valid_email">Please enter a valid email address</string>
    <string name="no_account_sign_up">No account? SIGN UP</string>
    <string name="have_an_account_log_in">Have an account? LOG IN</string>
    <string name="add_photo">Add photo</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_pass">Please enter password</string>
    <string name="confirm_pass">Please confirm password</string>
    <string name="pass_mismatch">Password mismatched</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="confirm">Confirm</string>
    <string name="dob_enter">Please enter your date of birth</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_gallery">Choose from Gallery</string>
    <string name="permission_text">You need to allow permissions</string>
    <string name="permission_deny">Permission denied! App may not work perfectly</string>
    <string name="take_photo_title">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="title_persmission_external_storage">Write External Storage</string>
    <string name="title_persmission_read_storage">Read External Storage</string>
    <string name="error_permission_required">You need to grant access to </string>
    <string name="yes_title">Yes</string>
    <string name="cancel_title">Cancel</string>
    <string name="no_title">No</string>



    <string name="coupon_overview">Coupon Overview</string>

    <!--DIALOG MESSAGES-->
    <string name="loading">Loading</string>
    <string name="plz_wait">Please wait</string>

    <!--ERROR MESSAGES-->
    <string name="request_error_message">Something went wrong. Please try again later</string>
    <string name="no_internt">Internet not connected</string>

</resources>
