<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_back"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/arrow"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
             />

        <TextView
            android:id="@+id/textView_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="15dp"
            android:clickable="true"
            android:text="@string/no_account_sign_up"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:layout_below="@+id/top">

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:paddingLeft="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="98dp"
            android:hint="@string/email"
            android:background="@drawable/round_edittext"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editText_pass"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:paddingLeft="10dp"
            android:layout_alignEnd="@+id/editText_email"
            android:layout_alignLeft="@+id/editText_email"
            android:layout_alignRight="@+id/editText_email"
            android:layout_alignStart="@+id/editText_email"
            android:layout_below="@+id/editText_email"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_pass"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="@drawable/button_selector"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:text="@string/forgot_password"
            android:textColor="@color/pink" />
    </RelativeLayout>
</RelativeLayout>