<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <Button
                android:id="@+id/button_back"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:background="@drawable/arrow" />

            <TextView
                android:id="@+id/textView_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_margin="15dp"
                android:clickable="true"
                android:text="@string/have_an_account_log_in"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/top"
            android:background="@drawable/bg">

            <ImageView
                android:id="@+id/imageView_add"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:src="@drawable/add_photo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView_add"
                android:layout_centerHorizontal="true"
                android:text="@string/add_photo"
                android:textColor="@color/pink" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView2"
                android:layout_margin="5dp"
                android:background="@drawable/round_edittext"
                android:hint="@string/name"
                android:paddingLeft="5dp" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editText_name"
                android:layout_margin="5dp"
                android:background="@drawable/round_edittext"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dp" />

            <EditText
                android:id="@+id/editText_pass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editText_email"
                android:layout_margin="5dp"
                android:background="@drawable/round_edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="5dp" />

            <EditText
                android:id="@+id/editText_c_pass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editText_pass"
                android:layout_margin="5dp"
                android:background="@drawable/round_edittext"
                android:hint="Confirm"
                android:inputType="textPassword"
                android:paddingLeft="5dp" />

            <TextView
                android:id="@+id/textView_dob"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/editText_c_pass"
                android:layout_margin="5dp"
                android:background="@drawable/round_edittext"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="Date of Birth"
                android:textSize="17dp" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_dob"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/edit_profile_radiobtn"
                    android:checked="true"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/male"
                    android:textColor="@color/pink"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:button="@drawable/edit_profile_radiobtn"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/female"
                    android:textColor="@color/pink"
                    android:textSize="18sp" />

            </RadioGroup>

            <Button
                android:id="@+id/button_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_selector"
                android:text="@string/sign_up"
                android:textColor="@color/white" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>